<resources>
    <string name="app_name">Chiron</string>

    <string name="login_address_label">Address:</string>
    <string name="login_address">http://192.168.0.5:8000</string>
    <string name="login_username">Username</string>
    <string name="login_button">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to UI -->
    <string name="DONE">X</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="repLbl">Reps:</string>
    <string name="loadLbl">Load:</string>
    <string name="placeholder" />
    <string name="viewUrl">Watch Video</string>
    <string name="viewDiet">Diet</string>
    <string name="viewWorkout">Workout</string>
    <string name="title_activity_meal_view">MealViewActivity</string>
    <string name="spoofDietSummary">Meal Summary:\nBreakfast: Eggs, Bacon, Greek Yogurt\\nLunch: BLT Sandwich\\nDinner: Ground Beef, Soy Sauce Veggies</string>
    <string name="spoofWorkoutSummary">Workout Today:\nBench Press 4x10\nMilitary Press 4x10\nDB Bicep Curl 3x10\nTricep Extension 3x10</string>
</resources>
