<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="top"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/setName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"
            android:textColor="@color/colorText"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/setInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            android:textColor="@color/colorText"
            android:textSize="16dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/setRepsLbl"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:text="@string/repLbl"
            android:textColor="@color/colorText"
            android:textSize="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />
        <Button
            android:id="@+id/setReps"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:textColor="@color/colorAlternateText"
            android:onClick="repSetter"
            android:background="@drawable/circle_button"
            app:layout_constraintLeft_toRightOf="@id/setRepsLbl"/>
        <TextView
            android:id="@+id/setLoadLbl"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16dp"
            android:textColor="#161616"
            android:padding="10dp"
            android:text="@string/loadLbl"
            app:layout_constraintLeft_toRightOf="@id/setReps"/>
        <Button
            android:id="@+id/decrementLoad"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:textColor="@color/colorAlternateText"
            android:text="@string/decrement"
            android:background="@drawable/circle_button"
            app:layout_constraintLeft_toRightOf="@id/setLoadLbl"
            android:onClick="decrement"/>
        <TextView
            android:id="@+id/setLoad"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/colorText"
            android:padding="10dp"
            app:layout_constraintLeft_toRightOf="@id/decrementLoad"/>
        <Button
            android:id="@+id/incrementLoad"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:textColor="@color/colorAlternateText"
            android:text="@string/increment"
            android:background="@drawable/circle_button"
            app:layout_constraintLeft_toRightOf="@id/setLoad"
            android:onClick="increment"/>
        <Button
            android:id="@+id/finalizeSet"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:textColor="@color/colorAlternateText"
            android:text="@string/DONE"
            android:onClick="setComplete"
            android:background="@drawable/circle_button"
            android:layout_margin="10dp"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>